# the-program

the-program/: CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  pyproject.toml  requirements.txt  run.py
the-program/docs/: ANNOUNCEMENT.md
the-program/tests/: test_core.py
the-program/the_program/: __init__.py  __main__.py  agent.py  appraisal.py  backends.py  cli.py  emotion.py  memory.py  program.py  social.py
the-program/the_program.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
